<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:id="@+id/mainLayout">
    <!-- android:background="@drawable/background" -->

    <AnalogClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/analogClock"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="200dp"
        style="@style/TextShadow"
        android:text="@string/main_NA"/>

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="225dp"
        android:layout_marginLeft="200dp"
        style="@style/TextShadow"
        android:text="@string/main_NA"/>

    <TextView
        android:id="@+id/wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_NA"
        android:layout_marginTop="250dp"
        style="@style/TextShadow"
        android:layout_marginLeft="200dp" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="275dp"
        android:layout_marginLeft="200dp"
        style="@style/TextShadow"
        android:text="@string/main_NA"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_main_city"
        android:id="@+id/lblcity"
        android:layout_marginTop="200dp"
        style="@style/TextShadow"
        android:layout_marginLeft="75dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_main_temperature"
        android:id="@+id/lblTemp"
        android:layout_marginTop="225dp"
        style="@style/TextShadow"
        android:layout_marginLeft="75dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_main_wind"
        android:id="@+id/lblwind"
        android:layout_marginTop="250dp"
        style="@style/TextShadow"
        android:layout_marginLeft="75dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_main_humidity"
        android:id="@+id/lblhumidity"
        android:layout_marginTop="275dp"
        style="@style/TextShadow"
        android:layout_marginLeft="75dp" />

</FrameLayout>
